Add fingerprinting on graphs functionality
