# fingerprinter/services/handlers.py
@@ -11,6 +11,7 @@ Service layer of the fingerprinter web services.
 import logging
 import uuid
 from contextlib import contextmanager
+from typing import List
 
 from fingerprint.service_layer.handlers import generate_endpoint_fingerprint_report
 
@@ -40,18 +41,18 @@ def upload_file_to_dataset(dataset: str, file_path: str, sparql_adapter: Abstrac
         sparql_adapter.delete_dataset(dataset)
 
 
-def fingerprint_sparql_endpoint(sparql_endpoint: str, output_location: str, graph: str = '') -> str:
+def fingerprint_sparql_endpoint(sparql_endpoint: str, output_location: str, graphs: List = None) -> str:
     """
         Fingerprint a SPARQL endpoint using the fingerprinter
         available at https://github.com/meaningfy-ws/rdf-fingerprinter.
     :param sparql_endpoint: SPARQL endpoint for querying the triplestore service
     :param output_location: location for the report to be built in
-    :param graph: (optional) restrict the fingerprinting calculation to this graph
+    :param graphs: (optional) restrict the fingerprinting calculation to this graph
     :return: the report location
     """
     logger.debug('start fingerprint sparql endpoint library call')
     report_path = str(generate_endpoint_fingerprint_report(
-        sparql_endpoint_url=sparql_endpoint, output_location=output_location,
+        sparql_endpoint_url=sparql_endpoint, output_location=output_location, selected_graphs=graphs,
         external_template_location=config.RDF_FINGERPRINTER_TEMPLATE_LOCATION))
 
     logger.debug('finish fingerprint sparql endpoint library call')
@@ -59,13 +60,13 @@ def fingerprint_sparql_endpoint(sparql_endpoint: str, output_location: str, grap
 
 
 def fingerprint_file(file_path: str, output_location: str, sparql_adapter: AbstractSPARQLAdapter,
-                     graph: str = '') -> str:
+                     graphs: List = None) -> str:
     """
         Fingerprint a file using the fingerprinter available at https://github.com/meaningfy-ws/rdf-fingerprinter.
     :param file_path: file to be fingerprinted
     :param output_location: location for the report to be built in
     :param sparql_adapter: adapter used to perform triplestore operations
-    :param graph: (optional) restrict the fingerprinting calculation to this graph
+    :param graphs: (optional) restrict the fingerprinting calculation to this graph
     :return:
     """
     logger.debug('start fingerprint file library call')
@@ -74,7 +75,7 @@ def fingerprint_file(file_path: str, output_location: str, sparql_adapter: Abstr
 
     with upload_file_to_dataset(dataset_name, file_path, sparql_adapter):
         sparql_endpoint = f'{config.RDF_FINGERPRINTER_FUSEKI_SERVICE}/{dataset_name}/query'
-        report_path = fingerprint_sparql_endpoint(sparql_endpoint, output_location, graph)
+        report_path = fingerprint_sparql_endpoint(sparql_endpoint, output_location, graphs)
 
     logger.debug('end fingerprint file library call')
     return report_path
